style: stop issue list header wrapping between tablet and laptop sizes

--- a/client/src/components/IssueList/style.css
+++ b/client/src/components/IssueList/style.css
@@ -49,4 +49,23 @@
   color: #F4FAFB;
   background-color: #1E7A8E;
 }
+
+@media (max-width: 1366px) {
+  .issue-bar .name-col {
+    -ms-flex-preferred-size: 35%;
+        flex-basis: 35%;
+  }
+  .issue-bar .category-col {
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%;
+  }
+  .issue-bar .due-date-col {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+  }
+  .issue-bar .status-col {
+    -ms-flex-preferred-size: 10%;
+        flex-basis: 10%;
+  }
+}
 /*# sourceMappingURL=style.css.map */
