--- a/client/src/stylesheets/_media-queries.scss
+++ b/client/src/stylesheets/_media-queries.scss
@@ -1,8 +1,8 @@
 @import './variables';
 
 @media (max-width: $breakpoint-laptop){
-    section{
-        background-color: red;
+    h4{
+        font-size: 1rem;
     }
 }
 
