--- a/client/src/stylesheets/index.css
+++ b/client/src/stylesheets/index.css
@@ -1,27 +1,3 @@
-@media (max-width: 1366px) {
-  section {
-    background-color: red;
-  }
-}
-
-@media (max-width: 768px) {
-  section {
-    background-color: blue;
-  }
-}
-
-@media (max-width: 411px) {
-  section {
-    background-color: yellow;
-  }
-}
-
-@media (max-width: 360px) {
-  section {
-    background-color: green;
-  }
-}
-
 body {
   background-color: #F4FAFB;
 }
@@ -68,5 +44,29 @@ a, .link-button {
   font-size: 1rem;
   font-weight: bold;
   text-decoration: underline;
+}
+
+@media (max-width: 1366px) {
+  h4 {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  section {
+    background-color: blue;
+  }
+}
+
+@media (max-width: 411px) {
+  section {
+    background-color: yellow;
+  }
+}
+
+@media (max-width: 360px) {
+  section {
+    background-color: green;
+  }
 }
 /*# sourceMappingURL=index.css.map */
